# EasyPySide

./: .gitignore  README.md  pyproject.toml  requirements.txt  resources.qrc  setup.py
easypyside/: __init__.py  forms.py  resources.py  resources.qrc  tools.py  widgets.py
lib_test/: __init__.py  __resources_rc.py  forms.py  module1.py  resources.py  resources.qrc  tools.py  widgets.py
modules/: module1.py
test/: PySide6_Forms_Update.py  script.py
