[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "easypyside"
version = "2025.11.21"
description = "Simple wrapper for PySide6"
readme = "README.md"
license = { file = "LICENSE" }
authors = [
  { name="Pablo GP", email="pablogonzalezpila@gmail.com" }
]
requires-python = ">=3.8"
dependencies = [
  "PySide6",
  "pandas",
  "markdown2"
]

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
where = ["."]
include = ["easypyside*"]

[tool.setuptools.package-data]
easypyside = ["__forms/*"]

[project.urls]
"Homepage" = "https://github.com/PaulFilms/EasyPySide"
"Documentation" = "https://github.com/PaulFilms/EasyPySide/blob/main/README.md"
"Bug Tracker" = "https://github.com/PaulFilms/EasyPySide/issues"
